--- a/main.ipynb
+++ b/main.ipynb
@@ -2,17 +2,26 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "data = pd.read_csv('Ranking.csv')"
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = pd.read_csv(\"Ranking.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -77,13 +86,13 @@
    ],
    "source": [
     "# To sort universities by Overall Score in descending order\n",
-    "sorted_data = data.sort_values(by='OverAll Score', ascending=False)\n",
+    "sorted_data = data.sort_values(by=\"OverAll Score\", ascending=False)\n",
     "print(sorted_data)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -160,21 +169,22 @@
     }
    ],
    "source": [
-    "data['No of student'] = data['No of student'].replace(',','', regex=True)\n",
-    "data['No of student per staff'] = data['No of student per staff'].replace(',','', regex=True)\n",
+    "data[\"No of student\"] = data[\"No of student\"].replace(\",\", \"\", regex=True)\n",
+    "data[\"No of student per staff\"] = data[\"No of student per staff\"].replace(\n",
+    "    \",\", \"\", regex=True\n",
+    ")\n",
     "\n",
-    "data['No of student'] = data['No of student'].astype(int)\n",
-    "data['No of student per staff'] = data['No of student per staff'].astype(int)\n",
+    "data[\"No of student\"] = data[\"No of student\"].astype(int)\n",
+    "data[\"No of student per staff\"] = data[\"No of student per staff\"].astype(int)\n",
     "\n",
     "\n",
-    "\n",
-    "data['Avg Students per Staff'] = data['No of student'] / data['No of student per staff']\n",
+    "data[\"Avg Students per Staff\"] = data[\"No of student\"] / data[\"No of student per staff\"]\n",
     "print(data)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -183,19 +193,21 @@
        "8"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "filtered_data = data[(data['Location'] == 'United States') & (data['No of student'] > 40000)]\n",
+    "filtered_data = data[\n",
+    "    (data[\"Location\"] == \"United States\") & (data[\"No of student\"] > 40000)\n",
+    "]\n",
     "len(filtered_data)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -204,19 +216,19 @@
        "16.27"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "mean_students_per_staff = data['No of student per staff'].mean()\n",
+    "mean_students_per_staff = data[\"No of student per staff\"].mean()\n",
     "mean_students_per_staff"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -239,7 +251,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -251,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -270,19 +282,19 @@
        "Name: Total Score, dtype: float64"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data['Total Score'] = data['Teaching Score'] + data['Research Score']\n",
-    "data['Total Score'].head(10)"
+    "data[\"Total Score\"] = data[\"Teaching Score\"] + data[\"Research Score\"]\n",
+    "data[\"Total Score\"].head(10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -903,30 +915,21 @@
        "[14 rows x 100 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "pivoted_data = data.pivot(index='Location', columns='Name of University', values='OverAll Score')\n",
+    "pivoted_data = data.pivot(\n",
+    "    index=\"Location\", columns=\"Name of University\", values=\"OverAll Score\"\n",
+    ")\n",
     "pivoted_data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pandas as pd\n",
-    "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -942,16 +945,16 @@
    ],
    "source": [
     "plt.figure(figsize=(10, 6))\n",
-    "plt.bar(data['University Rank'], data['OverAll Score'])\n",
-    "plt.xlabel('University Rank')\n",
-    "plt.ylabel('Overall Score')\n",
-    "plt.title('University Rank vs. Overall Score')\n",
+    "plt.bar(data[\"University Rank\"], data[\"OverAll Score\"])\n",
+    "plt.xlabel(\"University Rank\")\n",
+    "plt.ylabel(\"Overall Score\")\n",
+    "plt.title(\"University Rank vs. Overall Score\")\n",
     "plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -969,16 +972,16 @@
     "# Histogram: Distribution of Overall Score\n",
     "\n",
     "plt.figure(figsize=(10, 6))\n",
-    "plt.hist(data['OverAll Score'], bins=20, edgecolor='k')\n",
-    "plt.xlabel('Overall Score')\n",
-    "plt.ylabel('Frequency')\n",
-    "plt.title('Distribution of Overall Score')\n",
-    "plt.show()\n"
+    "plt.hist(data[\"OverAll Score\"], bins=20, edgecolor=\"k\")\n",
+    "plt.xlabel(\"Overall Score\")\n",
+    "plt.ylabel(\"Frequency\")\n",
+    "plt.title(\"Distribution of Overall Score\")\n",
+    "plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -993,12 +996,13 @@
     }
    ],
    "source": [
-    "numeric_data = data.select_dtypes(include='number')\n",
+    "import seaborn as sns\n",
+    "numeric_data = data.select_dtypes(include=\"number\")\n",
     "\n",
     "correlation_matrix = numeric_data.corr()\n",
     "plt.figure(figsize=(10, 6))\n",
-    "sns.heatmap(correlation_matrix, annot=True, cmap='coolwarm')\n",
-    "plt.title('Correlation Matrix')\n",
+    "sns.heatmap(correlation_matrix, annot=True, cmap=\"coolwarm\")\n",
+    "plt.title(\"Correlation Matrix\")\n",
     "plt.show()"
    ]
   }
