--- a/main.ipynb
+++ b/main.ipynb
@@ -7,7 +7,8 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n"
    ]
   },
   {
@@ -996,7 +997,6 @@
     }
    ],
    "source": [
-    "import seaborn as sns\n",
     "numeric_data = data.select_dtypes(include=\"number\")\n",
     "\n",
     "correlation_matrix = numeric_data.corr()\n",
